@@ -14,3 +14,4 @@ What's new
 Bug fixes
 ~~~~~~~~~
 
+ * When editing a document link in rich text, the document ID is no longer erroneously interpreted as a page ID (Stephen Rice)
